--- a/style.css
+++ b/style.css
@@ -1,63 +1,95 @@
-:root {
-    --background: #FFFFFF;
-    --fonts: #EEEEEE;
-  }
-  
-  html {
-    min-width: 100%;
-    background: linear-gradient(#428BC2, #5AB7D6);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-  }
-  body {
-    color: var(--fonts);
-    font-family: 'Inconsolata', monospace;
-  }
-  a {
-    color: white;
-    text-decoration: none;
-  }
-  a:hover {
-    text-shadow: 1px 1px #FFFFFF;
-  }
-  
-  #nav {
-    display: flex;
-    margin: 30px 37%;
-    width: 45%;
-    line-height: 30%;
-  }
-  #pfp {
-    position: absolute;
-    margin: auto 30%;
-    width: 6%;
-    border: solid;
-    border-width: 2px;
-    border-color: white;
-    border-radius: 100px;
-    z-index: -1;
-  }
-  #headers {
-    padding-top: 1%;
-    padding-left: 15px;
-    white-space: nowrap;
-  }
-  #student-info {
-    width: 100%;
-    padding-left: 50%;
-  }
-  
-  #main-content-container {
-    display: grid;
-    width: 40%;
-    margin: 50px auto;
-    text-align: justify;
-  }
-  
-  #mediator-image {
-    position: absolute;
-    opacity: 40%;
-    width: 40%;
-    margin: -100px 10%;
-    z-index: -1;
-  }
+html {
+  min-width: 100%;
+  background: linear-gradient(#428BC2, #5AB7D6);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  overflow-y: scroll;
+}
+body {
+  color: #EEEEEE;
+  font-family: 'Inconsolata', monospace;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+a:hover {
+  text-shadow: 1px 1px #FFFFFF;
+}
+#student-info a {
+  line-height: 10px;
+}
+#student-info a:hover {
+  text-decoration: underline;
+  text-shadow: none;
+}
+h2, h4, h3, p {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+ul {
+  columns: 2;
+  padding: 0;
+  margin: 0;
+}
+
+#para-job h3 {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#nav {
+  display: flex;
+  margin: 30px 37%;
+  width: 45%;
+  line-height: 30%;
+  padding-top: 30px;
+}
+#pfp-container {
+  display: flex;
+  width: 3000px;
+  background-color: red;
+}
+#pfp {
+  position: absolute;
+  margin: 8px 30% auto 27%;
+  width: 130px;
+  border: solid;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 100px;
+  //z-index: -1;
+}
+#headers {
+  padding-top: -10px;
+  padding-left: 15px;
+  white-space: nowrap;
+}
+#student-info {
+  width: 100%;
+  padding-left: 15%;
+}
+
+#main-content-container {
+  display: grid;
+  width: 40%;
+  margin: 50px auto;
+  text-align: justify;
+  padding-top: 60px;
+}
+
+#job-links {
+  margin: auto;
+}
+
+#mediator-image {
+  position: fixed;
+  opacity: 25%;
+  width: 40%;
+  margin: 6em 10%;
+  z-index: -1;
+}
+
+.body-content {
+  display: none;
+}
