--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
 body {
   color: #EEEEEE;
   font-family: 'Inconsolata', monospace;
+  text-shadow: 2px 2px rgba(39, 84, 199, 0.3);
+}
+p {
+  font-size: 17px;
 }
 a {
   color: white;
@@ -26,6 +30,9 @@ a:hover {
 h2, h4, h3, p {
   margin-top: 15px;
   margin-bottom: 10px;
+}
+h4 {
+  font-size: 20px;
 }
 ul {
   columns: 2;
@@ -58,7 +65,6 @@ ul {
   border-width: 2px;
   border-color: white;
   border-radius: 100px;
-  //z-index: -1;
 }
 #headers {
   padding-top: -10px;
@@ -84,7 +90,7 @@ ul {
 
 #mediator-image {
   position: fixed;
-  opacity: 25%;
+  opacity: 15%;
   width: 1000px;
   margin: 6em 10%;
   z-index: -1;
@@ -92,6 +98,10 @@ ul {
 
 .body-content {
   display: none;
+}
+
+.refs {
+  text-align: left;
 }
 
 @media (max-width: 1400px) {
