--- a/style.css
+++ b/style.css
@@ -104,9 +104,8 @@ ul {
   text-align: left;
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1150px) {
   #pfp {
-    margin-top: 2em;
-    width: 70px;
+    margin: 8px 30% auto 7%;
   }
 }
